starting to get an automated test suite going so I can easily check for regressions as I go along